--- a/HTML/css/style.css
+++ b/HTML/css/style.css
@@ -6,11 +6,11 @@
 body{
     background-color: chartreuse;
 }
-h1{
+.eje1{
     font-family: Georgia, 'Times New Roman', Times, serif;
     text-align: center;
 }
-h2{
+.ejer1{
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     text-align: end;
     color: rgb(125, 11, 139);
@@ -21,9 +21,40 @@ p {
     color: rgb(94, 98, 102);
     text-align: left;
 }
+.body3{
+    background-color: rgba(255, 127, 80, 0.637);
+}
+.header3{
+    margin-top: 5px;
+}
+.lista3{
+    color: rgb(60, 156, 148);
+}
+.ul3{
+    font-size: 1.5rem;
+}
 
-/*Crear un archivo HTML y un archivo CSS, vamos a linkear el archivo CSS al archivo HTML y
+a .google:link{
+    color: red;
+}
+.google:visited{
+    color: rgb(97, 99, 98) ;
+}
+.google:hover{
+    background-color: red;
+    color: white;
+}
+.google:active{
+    color: black;
+}
+/* Ejer7 Crear un archivo HTML y un archivo CSS, vamos a linkear el archivo CSS al archivo HTML y
 vamos a hacer lo mismo que el primer ejercicio, pero ahora la página va a tener un color
 de fondo a elección, el encabezado H1 tiene que tener una fuente a elección y estar
 centrado, lo mismo para el encabezado H2, y por ultimo los párrafos deben tener una
 fuente a elección, deben tener un color a elección y deben estar centrados a la izquierda.*/
+
+/*Ejer8 Definir las reglas CSS que permiten mostrar los enlaces con los siguientes estilos:
+• En su estado normal, los enlaces se muestran de color rojo #CC0000.
+• Cuando el usuario pasa su ratón sobre el enlace, se muestra con un color de fondo
+rojo #CC0000 y la letra de color blanco #FFF.
+• Los enlaces visitados se muestran en color gris claro #CCC.*/
