lista de libros  hecha

--- a/Tramo 5/biblioteca5/biblioteca5/src/main/resources/static/css/index.css
+++ b/Tramo 5/biblioteca5/biblioteca5/src/main/resources/static/css/index.css
@@ -36,7 +36,9 @@
     background-size: cover;
     height: 550px;
     display: flex;
-    justify-content: end;
+    margin-left: 35em;
+    margin-top: 5em;
+    justify-content: center;
 }
 
 .contenedorLibros{
