--- a/Tramo 5/biblioteca5/biblioteca5/src/main/resources/templates/index.html
+++ b/Tramo 5/biblioteca5/biblioteca5/src/main/resources/templates/index.html
@@ -5,12 +5,12 @@
         <title>Biblioteca Egg</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="../css/index.css">
     </head>
-    <body>
-        <div>  <h1>Anduvo esto...</h1>
-            Está funcionando con 
-            <h2>Visual y Netbeans</h2>
-            Y guarda los registros en la Base de datos
-        </div>
+    <body class="header">
+        <header >
+            <h1>App pseudo biblioteca de Egg </h1>
+        </header>
+        
     </body>
 </html>
