--- a/Tramo 5/biblioteca5/biblioteca5/src/main/resources/static/css/index.css
+++ b/Tramo 5/biblioteca5/biblioteca5/src/main/resources/static/css/index.css
@@ -1,6 +1,28 @@
-.navBar{
-    background-color: #fff !important;
+.body{
+    background-image: url(../img/FondoZoom_2.jpg);
+    background-size: cover;
 }
+.header{
+    display: flex;
+    margin-right: 15em;
+    margin-top: 5em;
+    justify-content: end;
+}
+.nave{
+    background-color: #ffcc008c;
+    width: 12em;
+    display: flex;
+    justify-content: center;
+    margin-right: 10em;
+    margin-left: 55em;
+    border-radius: 10px;
+}
+
+/*.navBar{
+    background-color: #fff !important;
+}*/
+
+
 
 .elementosNav{
     display: flex;
@@ -23,7 +45,7 @@
     margin: auto;
 }
 
-.tituloBiblioteca{
+.tituloBiblioteca{ 
     width: 80%;
     text-align: center;
     font-size: 40px;
@@ -31,15 +53,7 @@
     font-weight: 500;
 }
 
-.header{
-    background-image: url(../img/FondoZoom_2.jpg);
-    background-size: cover;
-    height: 550px;
-    display: flex;
-    margin-left: 35em;
-    margin-top: 5em;
-    justify-content: center;
-}
+
 
 .contenedorLibros{
     margin-top: 80px;
