--- a/Tramo 5/biblioteca5/biblioteca5/src/main/resources/templates/autor_modificar.html
+++ b/Tramo 5/biblioteca5/biblioteca5/src/main/resources/templates/autor_modificar.html
@@ -1,28 +1,27 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
+
     <head>
         <meta charset="ISO-8859-1">
-        <title>Registro de Editorial</title>
+        <title>Modificar Autor</title>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
-        <link rel="stylesheet" href="../css/formulario.css"> 
+        <link rel="stylesheet" href="../css/formulario.css">
     </head>
     <body class="fondo">
-        <header class="header">
-            <h1>Cargar Editorial</h1>
+        <header>
+            <div>
+            <h1>Modificar Autor</h1>
+        </div>
         </header>
-        <section class="contenedor">
-        
-            <form class="formulario my-3" action="/editorial/registro" method="POST">
+        <div>
+            <form class="formulario" th:action="@{/autor/modificar/__${autor.id}__}" method="POST">
+                
+                <input hidden th:value="${id}" name="id">
                 
                 <div>
-                    <label class="my-3">Nombre de la Editorial</label>
-                    <input type="text" class="form-control" name="nombre" placeholder="Nombre de la Editorial">
+                    <label>Nombre del Autor</label>
+                    <input th:value="${autor.nombre}" type="text" class="" name="nombre" placeholder="Nombre del Autor">
                  </div>
-                <br>
-                <div class="enviar">
-                    <label>Enviar a la base de datos</label> <br/>
-                    <button type="submit" class="btn btn-primary my-3 boton">Subir</button>
-                </div>
                 <div th:if="${error != null}" class="card text-white bg-danger mb-3 mensajeError" >
                     <div class="card-body">
                         <h5 class="card-title">Error 👎</h5>
@@ -35,9 +34,14 @@
                         <p class="card-text" th:text="${exito}"></p>
                     </div>
                 </div>
+                <br>
+                <div>
+                    <label>Enviar a la base de datos</label>
+                    <button type="submit" class="">Subir</button>
+                </div>
             </form>
         
-        </section>
+        </div>
         
         
         
