--- a/Tramo 5/biblioteca5/biblioteca5/src/main/resources/templates/index.html
+++ b/Tramo 5/biblioteca5/biblioteca5/src/main/resources/templates/index.html
@@ -6,11 +6,47 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="../css/index.css">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     </head>
-    <body class="header">
-        <header >
-            <h1>App pseudo biblioteca de Egg </h1>
+    <body class="body">
+        <header class="header" >
+            <h1>App Biblioteca de Egg </h1>
         </header>
+        <main >
+            <div class="nave my-4">
+                <nav class="nav flex-column">
+                    <li>
+                      <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">Libros</a>
+                      <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        <li><a class="dropdown-item"th:href="@{/libro/registrar}" >Crear Libro</a></li> <!---->
+                        <li><hr class="dropdown-divider"></li>
+                        <li><a class="dropdown-item" th:href="@{/libro/lista}" >Listar Libros</a></li> <!---->
+                      </ul>
+                    </li>
+                    <li>
+                      <a class="nav-link dropdown-toggle" href="" id="navbarDropdown2" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        Autores
+                      </a>
+                      <ul class="dropdown-menu" aria-labelledby="navbarDropdown2">
+                        <li><a class="dropdown-item"th:href="@{/autor/registrar}" >Crear Autor</a></li> <!---->
+                        <li><hr class="dropdown-divider"></li>
+                        <li><a class="dropdown-item"th:href="@{/autor/lista}" >Listar Autores</a></li> <!---->
+                      </ul>
+                    </li>
+
+                    <li>
+                      <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown3" role="button" data-bs-toggle="dropdown" aria-expanded="false">Editoriales</a>
+                      <ul class="dropdown-menu" aria-labelledby="navbarDropdown3">
+                        <li><a class="dropdown-item" th:href="@{/editorial/registrar}">Crear Editorial</a></li>
+                        <li><hr class="dropdown-divider"></li>
+                        <li><a class="dropdown-item" >Listar Editoriales</a></li> 
+                      </ul>
+                    </li>
+                </nav>
+                  
+            </div>
+        </main>
         
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>  
     </body>
 </html>
