--- a/Tramo 5/biblioteca5/biblioteca5/src/main/resources/templates/libro_form.html
+++ b/Tramo 5/biblioteca5/biblioteca5/src/main/resources/templates/libro_form.html
@@ -1,72 +1,79 @@
 <!DOCTYPE html>
 
 <html xmlns:th="http://www.thymeleaf.org">
-    <head>
-        <title>Registro de Libros</title>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
-         <link rel="stylesheet" href="../css/formulario.css">
-    </head>
-    <body>
-        <div><h1>Cargar libro</h1></div>
-        
-        <form class="formulario" action="/libro/registro" method="POST" enctype="multipart/form-data">
-                
-                <div th:if="${error != null}" class="card text-white bg-danger mb-3 mensajeError" >
-                    <div class="card-body">
-                        <h5 class="card-title">Error 👎</h5>
-                        <p class="card-text" th:text="${error}"></p>
-                    </div>
-                </div>
-                <div th:if="${exito != null}" class="card text-white bg-success mb-3 mt-3 mensajeExito" >
-                    <div class="card-body">
-                        <h5 class="card-title">Exito!</h5>
-                        <p class="card-text" th:text="${exito}"></p>
-                    </div>
-                </div>
 
-                <div class="form-group my-3">
-                    <label class="mb-2">Cargar Libro</label> 
-                    <input type="number" class="form-control" name="isbn" placeholder="ISBN">
-                </div>
-                <div class="form-group my-3">
-                    <input type="text" class="form-control" name="titulo" placeholder="Titulo del Libro">
-                </div>
+<head>
+    <title>Registro de Libros</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+    <link rel="stylesheet" href="../css/formulario.css">
+</head>
 
-                <div class="form-group my-3">
-                    <input type="number" class="form-control" name="ejemplares" placeholder="Cantidad de Ejemplares">
+<body class="fondo">
+    <header class="header">
+        <h1>Cargar Libro</h1>
+    </header>
+
+    <section class="contenedor">
+        <form class="formulario my-3" action="/libro/registro" method="POST" enctype="multipart/form-data">
+
+            <div th:if="${error != null}" class="card text-white bg-danger mb-3 mensajeError">
+                <div class="card-body">
+                    <h5 class="card-title">Error 👎</h5>
+                    <p class="card-text" th:text="${error}"></p>
                 </div>
-                
-                <!-- <div class="form-group my-3">
+            </div>
+            <div th:if="${exito != null}" class="card text-white bg-success mb-3 mt-3 mensajeExito">
+                <div class="card-body">
+                    <h5 class="card-title">Exito!</h5>
+                    <p class="card-text" th:text="${exito}"></p>
+                </div>
+            </div>
+
+            <div class="form-group my-2">
+                <label class="mb-2">ISBN</label>
+                <input type="number" class="form-control" name="isbn" placeholder="ISBN">
+            </div>
+            <div class="form-group my-2">
+                <label class="mb-2">Titulo del Libro</label>
+                <input type="text" class="form-control" name="titulo" placeholder="Titulo del Libro">
+            </div>
+
+            <div class="form-group my-2">
+                <label class="mb-2">Cantidad de Ejemplares</label>
+                <input type="number" class="form-control" name="ejemplares" placeholder="Cantidad de Ejemplares">
+            </div>
+
+            <!-- <div class="form-group my-3">
                     <input type="file" class="form-control" name="archivo">
                 </div> -->
-                
-                <div class="form-group my-3">
 
-                    <select name="idAutor">
+            <div class="form-group my-3">
 
-                        <option>Seleccionar Autor</option>
+                <select name="idAutor">
 
-                        <option th:each="autor : ${autores}"
-                                th:value="${autor.id}"
-                                th:text="${autor.nombre}"
-                                />
-                    </select>
-                </div>
-                <div class="form-group my-3">
-                    <select name="idEditorial">  
-                        <option>Seleccionar Editorial</option>
-                        <option th:each="editorial : ${editoriales}"
-                                th:value="${editorial.id}" 
-                                th:text="${editorial.nombre}"
-                                />
-                    </select>
-                </div>
+                    <option>Seleccionar Autor</option>
 
-                <button type="submit" class="btn btn-primary mt-3 botones">Guardar</button>
-            </form>
-        
-        
-    </body>
+                    <option th:each="autor : ${autores}" th:value="${autor.id}" th:text="${autor.nombre}" />
+                </select>
+            </div>
+            <div class="form-group my-3">
+                <select name="idEditorial">
+                    <option>Seleccionar Editorial</option>
+                    <option th:each="editorial : ${editoriales}" th:value="${editorial.id}"
+                        th:text="${editorial.nombre}" />
+                </select>
+            </div>
+
+            <button type="submit" class="btn btn-primary mt-3 botones">Guardar</button>
+        </form>
+
+    </section>
+
+
+
+</body>
+
 </html>
