--- a/Tramo 5/biblioteca5/biblioteca5/src/main/resources/templates/editorial_list.html
+++ b/Tramo 5/biblioteca5/biblioteca5/src/main/resources/templates/editorial_list.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
     <head>
-        <meta charset="utf-8" >
+        <meta charset="ISO-8859-1">
         <title>Biblioteca Egg</title>
         <link href="css/one-page-wonder.min.css" rel="stylesheet">
         <!-- CSS only -->
@@ -96,25 +96,20 @@
             <table class="table table-dark">
                 <thead>
                     <tr>
-                        <th scope="col">id</th>
-                        <th scope="col">Titulo</th>
-                        <th scope="col">Ejemplares</th>
-                        <th scope="col">Autor</th>
-                        <th scope="col">Editorial</th>
+                        <th scope="col">Id de la Editorial</th>
+                        <th scope="col">Nombre de la Editorial</th>
                         <th scope="col" sec:authorize="hasRole('ADMIN')" >Acciones</th>
+
                     </tr>
                 </thead>
-                <tbody th:each="libro : ${libros}"> <!-- itera la lista de Autores  -->
+                <tbody th:each="editorial : ${editoriales}"> <!-- itera la lista de Autores  -->
                     <tr>
-                        <th scope="row" th:text="${libro.isbn}"></th>
-                        <td th:text="${libro.titulo}"></th>
-                        <td th:text="${libro.ejemplares}"></td>
-                        <td th:text="${libro.autor.nombre}"></td>
-                        <th th:text="${libro.editorial.nombre}"></th> 
+                        <th scope="row" th:text="${editorial.id}"></th> <!-- muestra el id de Autores  -->
+                        <td th:text="${editorial.nombre}"></td> <!-- itera el nombre de Autores  -->
                         <td>
-                             <a th:href= "@{/libro/modificar/__${libro.isbn}__}"><i class="fas fa-feather-alt"></i> Modificar </a>
-                            
-                        </td>                
+                           <a sec:authorize="hasRole('ADMIN')" th:href= "@{/editorial/modificar/__${editorial.id}__}"><i class="fas fa-feather-alt"></i> Modificar </a>
+                        </td>
+
                     </tr>
 
                 </tbody>
@@ -136,7 +131,7 @@
             <section class="py-5 text-center container">
                 <div class="row py-lg-5">
                     <div class="col-lg-6 col-md-8 mx-auto">
-                        <a th:href="@{/index}" class="btn btn-primary my-2">Volver</a>
+                        <a th:href="@{/inicio }" class="btn btn-primary my-2">Volver</a>
                         </p>
                     </div>
                 </div>
