--- a/Tramo 5/biblioteca5/biblioteca5/src/main/resources/templates/index.html
+++ b/Tramo 5/biblioteca5/biblioteca5/src/main/resources/templates/index.html
@@ -39,7 +39,7 @@
                       <ul class="dropdown-menu" aria-labelledby="navbarDropdown3">
                         <li><a class="dropdown-item" th:href="@{/editorial/registrar}">Crear Editorial</a></li>
                         <li><hr class="dropdown-divider"></li>
-                        <li><a class="dropdown-item" >Listar Editoriales</a></li> 
+                        <li><a class="dropdown-item" th:href="@{/editorial/lista}">Listar Editorial</a></li> 
                       </ul>
                     </li>
                 </nav>
