--- a/Tramo 5/biblioteca5/biblioteca5/src/main/resources/templates/autor_modificar.html
+++ b/Tramo 5/biblioteca5/biblioteca5/src/main/resources/templates/autor_modificar.html
@@ -2,29 +2,29 @@
 <html xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 
     <head>
-        <meta charset="ISO-8859-1">
+        <meta charset="UTF-8">
         <title>Modificar Autor</title>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
-        <link rel="stylesheet" href="../css/formulario.css">
+        <link rel="stylesheet" href="../css/formulario.css"> 
     </head>
     <body class="fondo">
         <header>
             <div>
-            <h1>Modificar Autor</h1>
-        </div>
+                <h1>Modificar Autor</h1>
+            </div>
         </header>
-        <div>
+        <section class="contenedor">
             <form class="formulario" th:action="@{/autor/modificar/__${autor.id}__}" method="POST">
-                
+
                 <input hidden th:value="${id}" name="id">
-                
+
                 <div>
                     <label>Nombre del Autor</label>
                     <input th:value="${autor.nombre}" type="text" class="" name="nombre" placeholder="Nombre del Autor">
                 </div>
                 <div th:if="${error != null}" class="card text-white bg-danger mb-3 mensajeError" >
                     <div class="card-body">
-                        <h5 class="card-title">Error 👎</h5>
+                        <h5 class="card-title">Error ð</h5>
                         <p class="card-text" th:text="${error}"></p>
                     </div>
                 </div>
@@ -40,10 +40,6 @@
                     <button type="submit" class="">Subir</button>
                 </div>
             </form>
-        
-        </div>
-        
-        
-        
+        </section>
     </body>
 </html>
