--- a/Tramo 5/biblioteca5/biblioteca5/src/main/resources/templates/index.html
+++ b/Tramo 5/biblioteca5/biblioteca5/src/main/resources/templates/index.html
@@ -7,46 +7,40 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="../css/index.css">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" 
-              rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor"
-              crossorigin="anonymous">
+            rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor"
+            crossorigin="anonymous">
     </head>
     <body class="body">
         <header class="header" >
-            <h1>App Biblioteca de Egg </h1>
+            <h1>Biblioteca de Egg </h1>
         </header>
         <main >
-            <div class="nave my-4">
-                <nav class="nav flex-column">
-                    <li>
-                      <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">Libros</a>
-                      <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <li><a class="dropdown-item"th:href="@{/libro/registrar}" >Crear Libro</a></li> <!---->
-                        <li><hr class="dropdown-divider"></li>
-                        <li><a class="dropdown-item" th:href="@{/libro/lista}" >Listar Libros</a></li> <!---->
-                      </ul>
-                    </li>
-                    <li>
-                      <a class="nav-link dropdown-toggle" href="" id="navbarDropdown2" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                        Autores
-                      </a>
-                      <ul class="dropdown-menu" aria-labelledby="navbarDropdown2">
-                        <li><a class="dropdown-item"th:href="@{/autor/registrar}" >Crear Autor</a></li> <!---->
-                        <li><hr class="dropdown-divider"></li>
-                        <li><a class="dropdown-item"th:href="@{/autor/lista}" >Listar Autores</a></li> <!---->
-                      </ul>
-                    </li>
-
-                    <li>
-                      <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown3" role="button" data-bs-toggle="dropdown" aria-expanded="false">Editoriales</a>
-                      <ul class="dropdown-menu" aria-labelledby="navbarDropdown3">
-                        <li><a class="dropdown-item" th:href="@{/editorial/registrar}">Crear Editorial</a></li>
-                        <li><hr class="dropdown-divider"></li>
-                        <li><a class="dropdown-item" th:href="@{/editorial/lista}">Listar Editorial</a></li> 
-                      </ul>
-                    </li>
-                </nav>
-                  
+            <nav class="navbar navbar-expand-lg navBar">
+            <div class="containerImg">
+                <a href="/" class="navbar-brand d-flex align-items-center">
+                    <img class="logo" src="/img/Egg.png" alt="Img logo egg">
+                </a>
             </div>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse elementosNav" id="navbarNavDropdown">
+                <ul class="navbar-nav ms-auto elementos">
+                    <li class="nav-item my-4">
+                        <a class="nav-link my-4" th:if="${session.usuariosession == null}" href="/registrarse" id="navbarDropdown" role="button" aria-expanded="false">
+                            Registrate!
+                        </a>
+
+                    </li>
+                    <li class="nav-item my-4">
+                        <a class="nav-link my-4" th:if="${session.usuariosession == null}" href="/login" id="navbarDropdown" role="button" aria-expanded="false">
+                            LOGIN!
+                        </a>
+
+                    </li>
+                </ul>
+            </div>
+        </nav>
         </main>
         
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>  
