--- a/Tramo 5/biblioteca5/biblioteca5/src/main/resources/templates/login.html
+++ b/Tramo 5/biblioteca5/biblioteca5/src/main/resources/templates/login.html
@@ -9,26 +9,32 @@
     </head>
     <body class="fondo">
         <header class="header">
-            <h1>Cargar Autor</h1>
+            <h1>Loging</h1>
         </header>
         <div>
 
             <section class="contenedor">
-                <form class="formulario my-3"action="/autor/registro" method="POST">
-                
-                    <div>
-                        <label class="my-3">Nombre del Autor</label>
-                        <input type="text" class="form-control" name="nombre" placeholder="Nombre del Autor">
+                <form class="formulario" th:action="@{/logincheck}" method="POST">
+
+
+                    <div class="form-group my-3">
+                        <h3 class="card-title mx-3">Accede a la Biblioteca!</h3>
+                    </div>
+                    <div class="form-group my-3">
+                        <input type="email" class="form-control" name="email" placeholder="EMAIL">
+                    </div>
+    
+                    <div class="form-group my-3">
+                        <input type="password" class="form-control" name="password" placeholder="CONTRASEÑA">
                     </div>
                     
-                    <br>
-                    <div class="enviar">
-                        <label>Enviar a la base de datos</label> <br/>
-                        <button type="submit" class="btn btn-primary my-3 boton" >Subir</button>
-                    </div>
-                    <div th:if="${error != null}" class="card text-white bg-danger mb-3 mensajeError" >
+    
+                    <button type="submit" class="btn btn-primary mt-3 botones">Ingresar!</button>
+
+                    <div class="container-fluid contenedor my-2">
+                        <div th:if="${error != null}" class="card text-white bg-danger mb-3 mensajeError" >
                         <div class="card-body">
-                            <h5 class="card-title">Error 👎</h5>
+                            <h5 class="card-title">Error!</h5>
                             <p class="card-text" th:text="${error}"></p>
                         </div>
                     </div>
@@ -41,10 +47,6 @@
                 </form>
             </section>
             
-        
         </div>
-        
-        
-        
     </body>
 </html>
