--- a/Tramo 5/biblioteca5/biblioteca5/src/main/resources/static/css/formulario.css
+++ b/Tramo 5/biblioteca5/biblioteca5/src/main/resources/static/css/formulario.css
@@ -9,10 +9,10 @@
     text-align: center;
     margin-top: 3em;
 }
-/*.navBar{
-    background-color: #fff !important;
+.navBar{
+    height: 5em;
+    margin-top: 5em;
 }
-
 .elementosNav{
     display: flex;
     width: 30%;
@@ -33,7 +33,6 @@
     width: 40%;
     margin: auto;
 }
-*/
 
 .mensajeExito{
     width: 20%;
