--- a/Tramo 5/biblioteca5/biblioteca5/src/main/resources/static/css/index.css
+++ b/Tramo 5/biblioteca5/biblioteca5/src/main/resources/static/css/index.css
@@ -17,7 +17,9 @@
     margin-left: 55em;
     border-radius: 10px;
 }
-
+.usuario{
+    margin-left: 55em;
+}
 /*.navBar{
     background-color: #fff !important;
 }*/
