--- a/Tramo 5/biblioteca5/biblioteca5/src/main/resources/templates/index.html
+++ b/Tramo 5/biblioteca5/biblioteca5/src/main/resources/templates/index.html
@@ -1,26 +1,15 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 
-    <head>
-        <title>Biblioteca Egg</title>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="../css/index.css">
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" 
-            rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor"
-            crossorigin="anonymous">
-    </head>
+    <head th:replace="/fragments/head :: head"></head>
+    
     <body class="body">
         <header class="header" >
             <h1>Biblioteca de Egg </h1>
         </header>
         <main >
             <nav class="navbar navbar-expand-lg navBar">
-            <div class="containerImg">
-                <a href="/" class="navbar-brand d-flex align-items-center">
-                    <img class="logo" src="/img/Egg.png" alt="Img logo egg">
-                </a>
-            </div>
+            
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
