--- a/Tramo 5/biblioteca5/biblioteca5/src/main/resources/templates/libro_form.html
+++ b/Tramo 5/biblioteca5/biblioteca5/src/main/resources/templates/libro_form.html
@@ -65,9 +65,11 @@
                     <option th:each="editorial : ${editoriales}" th:value="${editorial.id}"
                         th:text="${editorial.nombre}" />
                 </select>
-            </div>
-
-            <button type="submit" class="btn btn-primary mt-3 botones">Guardar</button>
+            </div><div class="enviar">
+                        <label>Enviar a la base de datos</label> <br/>
+                        <button type="submit" class="btn btn-primary my-3 mx-5 boton" >Subir</button>
+                        <a th:href="@{/inicio }" class="btn btn-warning mx-5 my-2">Volver</a>
+                </div>
         </form>
 
     </section>
