--- a/Tramo 5/biblioteca5/biblioteca5/src/main/resources/templates/libro_list.html
+++ b/Tramo 5/biblioteca5/biblioteca5/src/main/resources/templates/libro_list.html
@@ -112,7 +112,7 @@
                         <td th:text="${libro.autor.nombre}"></td>
                         <th th:text="${libro.editorial.nombre}"></th> 
                         <td>
-                             <a th:href= "@{/libro/modificar/__${libro.isbn}__}"><i class="fas fa-feather-alt"></i> Modificar </a>
+                             <a sec:authorize="hasRole('ADMIN')" th:href= "@{/libro/modificar/__${libro.isbn}__}"><i class="fas fa-feather-alt"></i> Modificar </a>
                             
                         </td>                
                     </tr>
@@ -136,7 +136,7 @@
             <section class="py-5 text-center container">
                 <div class="row py-lg-5">
                     <div class="col-lg-6 col-md-8 mx-auto">
-                        <a th:href="@{/index}" class="btn btn-primary my-2">Volver</a>
+                        <a th:href="@{/inicio }" class="btn btn-primary my-2">Volver</a>
                         </p>
                     </div>
                 </div>
