--- a/Tramo 5/biblioteca5/biblioteca5/src/main/resources/templates/login.html
+++ b/Tramo 5/biblioteca5/biblioteca5/src/main/resources/templates/login.html
@@ -11,11 +11,30 @@
         <header class="header">
             <h1>Loging</h1>
         </header>
-        <div>
+        <nav class="navbar navbar-expand-lg navBar ">
+            
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse elementosNav my-4" id="navbarNavDropdown">
+                <ul class="navbar-nav ms-auto elementos">
+                    <li class="nav-item ">
+                        <a class="nav-link " th:if="${session.usuariosession == null}" href="/registrarse" id="navbarDropdown" role="button" aria-expanded="false">
+                            Registrate!
+                        </a>
 
-            <section class="contenedor">
+                    </li>
+                    <li class="nav-item ">
+                        <a class="nav-link " th:if="${session.usuariosession == null}" href="/login" id="navbarDropdown" role="button" aria-expanded="false">
+                            LOGIN!
+                        </a>
+
+                    </li>
+                </ul>
+            </div>
+        </nav>
+        <section class="contenedor">
                 <form class="formulario" th:action="@{/logincheck}" method="POST">
-
 
                     <div class="form-group my-3">
                         <h3 class="card-title mx-3">Accede a la Biblioteca!</h3>
@@ -27,7 +46,6 @@
                     <div class="form-group my-3">
                         <input type="password" class="form-control" name="password" placeholder="CONTRASEÑA">
                     </div>
-                    
     
                     <button type="submit" class="btn btn-primary mt-3 botones">Ingresar!</button>
 
@@ -46,7 +64,5 @@
                     </div>
                 </form>
             </section>
-            
-        </div>
     </body>
 </html>
