--- a/Tramo 5/biblioteca5/biblioteca5/src/main/resources/templates/registro_usuario.html
+++ b/Tramo 5/biblioteca5/biblioteca5/src/main/resources/templates/registro_usuario.html
@@ -11,51 +11,65 @@
         <header class="header">
             <h1>Registro de Usuario</h1>
         </header>
-        <div>
+        <nav class="navbar navbar-expand-lg navBar ">
+            
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse elementosNav my-4" id="navbarNavDropdown">
+                <ul class="navbar-nav ms-auto elementos">
+                    <li class="nav-item ">
+                        <a class="nav-link " th:if="${session.usuariosession == null}" href="/registrarse" id="navbarDropdown" role="button" aria-expanded="false">
+                            Registrate!
+                        </a>
+
+                    </li>
+                    <li class="nav-item ">
+                        <a class="nav-link " th:if="${session.usuariosession == null}" href="/login" id="navbarDropdown" role="button" aria-expanded="false">
+                            LOGIN!
+                        </a>
+
+                    </li>
+                </ul>
+            </div>
+        </nav>
 
             <section class="contenedor">
                 <form class="formulario" th:action="@{/registro}" method="POST">
 
+                    <div class="form-group my-3">
+                        <h3 class="card-title mx-3">Registrate!</h3>
+                    </div>
+                    <div class="form-group my-3">
+                        <input type="text" class="form-control" name="nombre" placeholder="NOMBRE" th:value="${nombre}">
+                    </div>
+                    <div class="form-group my-3">
+                        <input type="email" class="form-control" name="email" placeholder="EMAIL" th:value="${email}">
+                    </div>
 
-                <div class="form-group my-3">
-                    <h3 class="card-title mx-3">Registrate!</h3>
-                </div>
-                <div class="form-group my-3">
-                    <input type="text" class="form-control" name="nombre" placeholder="NOMBRE" th:value="${nombre}">
-                </div>
-                <div class="form-group my-3">
-                    <input type="email" class="form-control" name="email" placeholder="EMAIL" th:value="${email}">
-                </div>
+                    <div class="form-group my-3">
+                        <input type="password" class="form-control" name="password" placeholder="CONTRASEÑA" th:value="${password}">
+                    </div>
+                    <div class="form-group my-3">
+                        <input type="password" class="form-control" name="password2" placeholder="REPETIR CONTRASEÑA" th:value="${password2}">
+                    </div>
 
-                <div class="form-group my-3">
-                    <input type="password" class="form-control" name="password" placeholder="CONTRASEÑA" th:value="${password}">
-                </div>
-                <div class="form-group my-3">
-                    <input type="password" class="form-control" name="password2" placeholder="REPETIR CONTRASEÑA" th:value="${password2}">
-                </div>
-
-
-                <button type="submit" class="btn btn-primary mt-3 botones">Registrarme</button>
+                    <button type="submit" class="btn btn-primary mt-3 botones">Registrarme</button>
                 
-                <div th:if="${error != null}" class="card text-white bg-danger mb-3 my-3 mensajeError" >
-            <div class="card-body">
-                <h5 class="card-title">Error!</h5>
-                <p class="card-text" th:text="${error}"></p>
-            </div>
-        </div>
-        <div th:if="${exito != null}" class="card text-white bg-success mb-3 mt-3 mensajeExito" >
-            <div class="card-body">
-                <h5 class="card-title">Exito!</h5>
-                <p class="card-text" th:text="${exito}"></p>
-            </div>
-        </div>
-            </form>
+                    <div th:if="${error != null}" class="card text-white bg-danger mb-3 mensajeError" >
+                        <div class="card-body">
+                            <h5 class="card-title">Error!</h5>
+                            <p class="card-text" th:text="${error}"></p>
+                        </div>
+                    </div>
+                    <div th:if="${exito != null}" class="card text-white bg-success mb-3 mt-3 mensajeExito" >
+                        <div class="card-body">
+                            <h5 class="card-title">Exito!</h5>
+                            <p class="card-text" th:text="${exito}"></p>
+                        </div>
+                    </div>
+                </form>
             </section>
             
-        
-        </div>
-        
-        
-        
     </body>
 </html>
