agregar/modificar img a la base de datos

--- a/Tramo 5/biblioteca5/biblioteca5/src/main/resources/static/css/formulario.css
+++ b/Tramo 5/biblioteca5/biblioteca5/src/main/resources/static/css/formulario.css
@@ -45,7 +45,9 @@
     margin: auto;
     text-align: center;
 }
-
+.imgperfil{
+    background-color: aquamarine;
+}
 .contenedor{
     display: flex;
     align-items: center;
