--- a/Tramo 5/biblioteca5/biblioteca5/src/main/resources/templates/index.html
+++ b/Tramo 5/biblioteca5/biblioteca5/src/main/resources/templates/index.html
@@ -8,28 +8,9 @@
             <h1>Biblioteca de Egg </h1>
         </header>
         <main >
-            <nav class="navbar navbar-expand-lg navBar">
-            
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse elementosNav" id="navbarNavDropdown">
-                <ul class="navbar-nav ms-auto elementos">
-                    <li class="nav-item my-4">
-                        <a class="nav-link my-4" th:if="${session.usuariosession == null}" href="/registrarse" id="navbarDropdown" role="button" aria-expanded="false">
-                            Registrate!
-                        </a>
-
-                    </li>
-                    <li class="nav-item my-4">
-                        <a class="nav-link my-4" th:if="${session.usuariosession == null}" href="/login" id="navbarDropdown" role="button" aria-expanded="false">
-                            LOGIN!
-                        </a>
-
-                    </li>
-                </ul>
+            <div class="nave my-4"><br/>
+                <nav th:replace="/fragments/navbar :: nav"> </nav>
             </div>
-        </nav>
         </main>
         
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>  
