--- a/Tramo 5/biblioteca5/biblioteca5/src/main/resources/templates/inicio.html
+++ b/Tramo 5/biblioteca5/biblioteca5/src/main/resources/templates/inicio.html
@@ -13,9 +13,16 @@
             <div class="nave my-4"><br/>
                 <nav th:replace="/fragments/navbar :: nav"> </nav>
             </div>
-           <div class="usuario">
+            <div class="usuario">
                     <h3 th:if="${session.usuariosession != null}" th:text=" 'Hola '+ ${session.usuariosession.nombre} " ></h3>
-                </div>
+                    
+            </div>
+            
+            <div class="imgperfil bg-info">
+                <a th:if="${session.usuariosession.imagen != null}" class="d-flex align-items-center">
+                    <img class="logo"  th:src="@{/imagen/perfil/__${session.usuariosession.id}__}" alt=" usuario" >
+                    </a>
+            </div>
         </main>
         
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>  
