--- a/Tramo 5/biblioteca5/biblioteca5/src/main/resources/templates/login.html
+++ b/Tramo 5/biblioteca5/biblioteca5/src/main/resources/templates/login.html
@@ -9,7 +9,7 @@
     </head>
     <body class="fondo">
         <header class="header">
-            <h1>Loging</h1>
+            <h1>Login</h1>
         </header>
         <nav class="navbar navbar-expand-lg navBar ">
             
